[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -19,13 +19,7 @@
         </div>
         <div>
             <p>
-                This is the content for second article.This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.
-            </p>
-            <p>
-                This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.
-            </p>
-            <p>
-                This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.
+                This is the content for second article.T
             </p>
         </div>
     </body>
