--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -19,13 +19,7 @@
         </div>
         <div>
             <p>
-                This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.
-            </p>
-            <p>
-                This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.
-            </p>
-            <p>
-                This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.This is the content for first article.
+                This is the content for third article.
             </p>
         </div>
     </body>
