--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -5,12 +5,15 @@
         </title>
         <meta name="viewport" content="width=device-width, intial-scale=1" />
         <style>
-            .container{
-                max-width: 800px;
-                margin: 0 auto;
-                color: grey;
-                font-family: sans-serif;
-            }
+         .container {
+            max-width: 800px;
+            margin: 0 auto;
+            color: #a56a6a;
+            font-family: sans-serif;
+            padding-top: 60px;
+            padding-left: 20px;
+            padding-right: 20px;
+        }
         </style>
     </head>
     <body>
