--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,10 @@
         <div class="center text-big bold">
             Hi! I am prashita.Trial 2.
         </div>
+        <script>
+            alert('Hi,I\'m Javascript');
+        </script>
+        
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
